--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "portal-vue": "^2.1.0",
     "vue": "^2.6.11",
     "vue-chartist": "^2.3.0",
