--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.23.0",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuetify-admin": "^0.5.0",
     "vuex": "^3.4.0"
