--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint",
     "crud:make": "vue-cli-service crud:make",
     "crud:yaml": "vue-cli-service crud:yaml",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "portal-vue": "^2.1.0",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-chartist": "^2.3.0",
     "vue-i18n": "^8.26.3",
